--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>AI Stated Clerk</title>
 </head>
 <body>
     <div class="main">
-        <h1 id="">Welcome</h1>
+        <h1 id="welcome">Welcome</h1>
         <h3 id="subtitle">Click the button in the bottom right to get started.</h3>
     </div>
     <script type="text/javascript">
